<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tablet_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.hfut.lianya.administrator.dashboard.AdminDashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_admin_dashboard" />

    <fragment
        android:id="@+id/navigation_efficiency"
        android:name="com.hfut.lianya.administrator.efficiency.AdminEfficiencyFragment"
        android:label="@string/title_efficiency"
        tools:layout="@layout/fragment_admin_efficiency" />

    <fragment
        android:id="@+id/navigation_daily_management"
        android:name="com.hfut.lianya.administrator.daily.AdminDailyManagementFragment"
        android:label="@string/title_daily_management"
        tools:layout="@layout/fragment_admin_daily_management" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.hfut.lianya.administrator.notifications.AdminNotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_admin_notifications" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.hfut.lianya.administrator.home.AdminHomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_admin_home" />


</navigation>