<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/worker_mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.hfut.lianya.administrator.home.AdminHomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_admin_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.hfut.lianya.worker.dashboard.WorkerDashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_worker_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.hfut.lianya.worker.notifications.WorkerNotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_worker_notifications" />

    <fragment
        android:id="@+id/navigation_daily_management"
        android:name="com.hfut.lianya.worker.daily.WorkerDailyManagementFragment"
        android:label="@string/title_daily_management"
        tools:layout="@layout/fragment_worker_daily_management" />
</navigation>