<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/layout_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abnormality_sender"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tv_sender_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workstation"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tv_workstation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abnormality_time"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tv_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abnormality_type"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tv_abnormality_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/black" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blemish_package_id"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tv_blemish_package_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/black" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abnormality_desc"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tv_abnormality_desc"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:maxLines="5"
            android:ellipsize="end"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/accept_abnormality"
        android:textSize="17sp" />
    <Button
        android:id="@+id/btn_reject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/reject_abnormality"
        android:textSize="17sp" />
    <Button
        android:id="@+id/btn_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/complete_abnormality"
        android:textSize="17sp" />

</LinearLayout>