<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".administrator.home.ModifyPasswordActivity"
    android:orientation="vertical">
    <include layout="@layout/layout_toolbar"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_old_password"
        app:endIconMode="password_toggle"
        android:background="@color/white"
        app:errorEnabled="true"
        app:errorTextColor="#ff0000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_10">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/please_enter_old_password"
        android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_new_password"
        app:endIconMode="password_toggle"
        android:background="@color/white"
        app:errorEnabled="true"
        app:errorTextColor="#ff0000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_10">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/please_enter_new_password"
        android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_confirm_new_password"
        app:endIconMode="password_toggle"
        android:background="@color/white"
        app:errorEnabled="true"
        app:errorTextColor="#ff0000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_10">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/please_confirm_new_password"
        android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btn_confirm_modify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_modify"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>